--- a/package.json
+++ b/package.json
@@ -67,10 +67,14 @@
     "gulp-webpcss": "^1.1.1",
     "gulp-zip": "^5.1.0",
     "sass": "^1.45.1",
+    "swiper": "*7.2.0",
     "vinyl-ftp": "^0.6.1",
     "webp-converter": "*2.2.3",
     "webpack": "^5.65.0",
-    "webpack-stream": "^7.0.0",
-    "swiper": "*7.2.0"
+    "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "gsap": "^3.11.4",
+    "scrolltrigger": "^1.0.1"
   }
 }
